--- a/index.html
+++ b/index.html
@@ -70,9 +70,21 @@
             <img src="res/img/undraw_charts_jj6t.svg" class="col s12 m8 xl4 center" data-aos="fade-up">
             <div class="col s12 xl8">
               <h4 class="exp_title">Parkinson's Algorithm</h4>
-              <h5><i>Developer from November 2017 - April 2018</i></h5>
+              <h5><i>
+                <span class="full-text">
+                  Developer from November 2017 - April 2018
+                </span>
+                <span class="short-text">Developer from Nov '17 - Apr '18</span></i></h5>
               <h5>
-                An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse. The project was a gateway into Biomedical Engineering and the joy that comes with working in the Medical industry.
+                <!--
+                <span class="full-text">
+                </span>
+                <span class="short-text"></span>
+                -->
+                <span class="full-text">
+                  An algorithm developed in the R language that won 1st place at the Alameda County Science Fair. It performs statistical analysis on the hand tremors of Parkinson's patients to determine if their condition is getting better or worse. The project was a gateway into Biomedical Engineering and the joy that comes with working in the Medical industry.
+                </span>
+                <span class="short-text">An algorithm developed in the R language that won 1st place at the Alameda County Science Fair.</span>
               </h5>
               <h5 class="project-links">
                 View
@@ -87,10 +99,19 @@
             <img src="res/img/undraw_operating_system_4lr6 (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4 class="exp_title">2Serve</h4>
-              <h5><i>Lead Developer from August 2017 - Current<br />
-                 Vice - President from August 2019 - Current</i></h5>
               <h5>
-                An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers. It is still an active club at Dublin High school with 50+ members and ~10 organizations signed up with its database. The project was submitted for the Diamond Challenge (an entrepreneurial competition) and was a state finalist.
+                <i>
+                <span class="full-text">
+                  Vice - President from August 2019 - Current<br />
+                  Lead Developer from August 2017 - Current
+                </span>
+                <span class="short-text">Vice-President from Aug '19 - Current</span>
+                </i></h5>
+              <h5>
+                <span class="full-text">
+                  An online platform seeking to bridge the gap between volunteering organizations and qualified high school volunteers. It is still an active club at Dublin High school with 50+ members and ~10 organizations signed up with its database. The project was submitted for the Diamond Challenge (an entrepreneurial competition) and was a state finalist.
+                </span>
+                <span class="short-text">An online platform made to connect volunteering organizations and high school volunteers.</span>
               </h5>
               <h5 class="project-links">
                 <a href="https://2-serve.org/" target = "_blank" class="generallink">Visit Site</a> 
@@ -102,68 +123,111 @@
             <img src="res/img/undraw_mobile_interface_wakp.svg" class="col s12 m8 xl4 center" id="tap_test_img"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4 class="exp_title">Tap Test</h4>
-              <h5><i>Developer from August 2018 - December 2018</i></h5>
+              <h5><i>
+                <span class="full-text">
+                  Developer from August 2018 - December 2018
+                </span>
+                <span class="short-text">Developer from Aug '18 - Dec '18</span></i></h5>
               <h5>
-                An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis. It would collect data regarding each subject, record reflexes, carry out calculations automatically, and could then share the data via email. The app was used by a live research group and garnered 500+ downloads.
+                <span class="full-text">
+                  An application created for a Stanford MedX research group in their work on Alzheimer's. The app assists with the data collection and statistical analysis. It would collect data regarding each subject, record reflexes, carry out calculations automatically, and could then share the data via email. The app was used by a live research group and garnered 500+ downloads.
+                </span>
+                <span class="short-text">An application that assists a Stanford MedX research group by collecting data, performing analysis, and exporting it.</span>
               </h5>
               <h5 class="project-links">
                 <a href="https://play.google.com/store/apps/details?id=com.tap.surenderpenchala.taptest&hl=en_US" target="_blank" class="generallink">View App</a> 
               </h5>
             </div>
           </div>
-
-          <div class="row" id="gfr_site">
-            <img src="res/img/undraw_Artificial_intelligence_oyxx (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4 class="exp_title">Gael Force Robotics</h4>
-              <h5><i>Lead Developer from November 2018 - Current</i></h5>
-              <h5>
-                A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
-              </h5>
-              <h5 class="project-links">
-                <a href="https://gaelforceroboticsdublin.github.io/" target = "_blank" class="generallink">Visit Site</a> 
-              </h5>
+          
+          <span class="full-text">
+            <div class="row" id="gfr_site">
+              <img src="res/img/undraw_Artificial_intelligence_oyxx (1).svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+              <div class="col s12 xl8">
+                <h4 class="exp_title">Gael Force Robotics</h4>
+                <h5><i>
+                  <span class="full-text">
+                    Lead Developer from November 2018 - Current
+                  </span>
+                  <span class="short-text">Lead Developer from Nov '18 - Current</span></i></h5>
+                <h5>
+                  <span class="full-text">
+                    A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
+                  </span>
+                  <span class="short-text">A website I helped develop in order to showcase my robotics team, provide resources for members, and maintain team blog.</span>
+                </h5>
+                <h5 class="project-links">
+                  <a href="https://gaelforceroboticsdublin.github.io/" target = "_blank" class="generallink">Visit Site</a> 
+                </h5>
+              </div>
             </div>
-          </div>
+          </span>
 
-          <div class="row">
-            <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4 class="exp_title">WCWMA Pleasanton</h4>
-              <h5><i>Developer/Designer from August 2019 - Current</i></h5>
-              <h5>
-                A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
-              </h5>
-              <h5 class="project-links">
-                <!--
-                  <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">Visit Site</a> 
-                  -->
-                <i>Site Under Development</i>
-              </h5>
+          <span class="full-text">
+            <div class="row">
+              <img src="res/img/karate_site.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+              <div class="col s12 xl8">
+                <h4 class="exp_title">WCWMA Pleasanton</h4>
+                <h5><i>
+                  <span class="full-text">
+                    Developer/Designer from August 2019 - Current
+                  </span>
+                  <span class="short-text">Developer from Aug '19 - Current</span></i></h5>
+                <h5>
+                  <span class="full-text">
+                    A website to advertise for my local karate school: West World Martial Arts Pleasanton. This is also the school where I recieved my black belt.
+                  </span>
+                  <span class="short-text">A website to advertise for my local karate school: West World Martial Arts Pleasanton.</span>
+                  
+                </h5>
+                <h5 class="project-links">
+                  <!--
+                    <a href="https://ritvikpen.github.io/WCWMA-Pleasanton-Site/about.html" target="_blank" class="generallink">Visit Site</a> 
+                    -->
+                  <i>Site Under Development</i>
+                </h5>
+              </div>
             </div>
-          </div>
+          </span>
 
-          <div class="row">
-            <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
-            <div class="col s12 xl8">
-              <h4 class="exp_title">Community Project</h4>
-              <h5><i>Statistician and Writer from November 2019 - April 2020</i></h5>
-              <h5>
-                Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented. Knowledge from the AP Statistics course I had previously underwent was applied to a practical context and used to positively impact student's choices regarding technology usage.
-              </h5>
-              <h5 class="project-links">
-                <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
-              </h5>
+          <span class="full-text">
+            <div class="row">
+              <img src="res/img/undraw_file_searching_duff.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
+              <div class="col s12 xl8">
+                <h4 class="exp_title">Community Project</h4>
+                <h5><i>
+                  <span class="full-text">
+                    Statistician and Writer from November 2019 - April 2020
+                  </span>
+                  <span class="short-text">Statistician from Nov '19 - Apr '20</span></i></h5>
+                <h5>
+                  <span class="full-text">
+                    Group research was done on technology usage and its correlation to overall health and time management for our AP Biology class. Our local school students were surveyed and recommendations to improve their lifestyle were presented. Knowledge from the AP Statistics course I had previously underwent was applied to a practical context and used to positively impact student's choices regarding technology usage.
+                  </span>
+                  <span class="short-text">Group research was done on technology usage and its correlation to overall health and time management in the context of our high school. 
+                  </span>
+                </h5>
+                <h5 class="project-links">
+                  <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
+                </h5>
+              </div>
             </div>
-          </div>
+          </span>
 
           <div class="row" id="asdrp">
             <img src="res/img/science.svg" class="col s12 m8 xl4 center"  data-aos="fade-up">
             <div class="col s12 xl8">
               <h4 class="exp_title">ASDRP Summer Research</h4>
-              <h5><i>Researcher during Summer 2020</i></h5>
+              <h5><i>
+                <span class="full-text">
+                  Researcher during Summer 2020
+                </span>
+                <span class="short-text">Researcher during Summer 2020</span></i></h5>
               <h5>
-                Research was conducted on the COVID-19 virus under the supervision of industry professionals. Computation Biochemistry techniques were used to interact with the COVID protease. It was conducted at ASDRP in Fremont by a small group of high schoolers after rigorous training and teaching of advanced biochemistry concepts. 
+                <span class="full-text">
+                  Research was conducted on the COVID-19 virus under the supervision of industry professionals. Computational Biochemistry techniques were used to interact with the COVID protease. It was conducted at ASDRP in Fremont by a small group of high schoolers after rigorous training and teaching of advanced biochemistry concepts. 
+                </span>
+                <span class="short-text">Research was conducted on the COVID-19 virus using Computational Biochemistry techniques. </span>
               </h5>
               <h5 class="project-links">
                 <i>
