--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
       <div class="row">
         <div class="col s12" id="project_tab">
 
+
           <h1>Experience</h1>
-          
+          <h4 class="full-text"><i>
+            Check out my work on Github: 
+            <a class="generallink" href="https://github.com/ritvikpen" target="_blank">
+              @ritvikpen
+            </a></i>
+          </h4>
+
           <div class="row">
             <img src="res/img/undraw_charts_jj6t.svg" class="col s12 m8 xl4 center" data-aos="fade-up">
             <div class="col s12 xl8">
