--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     
     <meta charset="UTF-8">
     <title>Ritvik - Portfolio</title>
+    <meta name="description" 
+	content="Ritviksiddha Penchala is an aspiring medical student with a passion for code. View his portfolio.">
     <link rel="icon" type="image/png" href="res/img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="res/img/favicon-16x16.png" sizes="16x16" />
 
