--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <meta charset="UTF-8">
-    <title>Ritvik - Portfolio</title>
+    <title>Ritviksiddha Penchala - Portfolio</title>
     <meta name="description" 
 	content="Ritviksiddha Penchala is an aspiring medical student with a passion for code. View his portfolio.">
     <link rel="icon" type="image/png" href="res/img/favicon-32x32.png" sizes="32x32" />
