--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
           <div class="col s12 xl8 white-text">
             <h1>About Me</h1>
             <h5>
-              First off, my actual name is Ritviksiddha Penchala, but it was too long to fit up top so I shortened it. Anyway, let's get into it.
+              Hi! My name's Ritviksiddha Penchala and I'm a freshman at UC San Diego. 
+              I'm a Biology major thats specializing in Bioinformatics. 
+              I've got a huge interest in biotechnology as a whole and hope to utilize my love for computers, programming, and technology in order to contribute to the field of health care. 
+              I've worked on a number of code and science-related projects before and absolutely love working in the intersection between those fields. 
             </h5>
-            <h5>
-              I’m an 12th grader at Dublin high school. I am a member of my school’s Biomedical Academy and have a passion for the field of healthcare. I participate in numerous activities, both in and out of school, to further my knowledge for the medical field as well as skills that I think will be useful in that area. I am involved in a number of clubs that allow me to pursue my interest in the medical field, robotics, and a number of other topics.
-            </h5>
-            <h5>
-              I have been at Dublin High school for 3 years now and absolutely love it. It has enabled me to challenge myself academically and take the rigorous courses that I desire. These include: AP Chemistry, AP Statistics, AP Biology, AP Calculus AB, AP Computer Science Applications, AP European History, Honors Medical Interventions, Honors English, and Honors Chemistry. I have a GPA of 4.50 and an SAT score of 1530. I’ve enjoyed my classes so far and look forward to Senior year. In addition to the academic opportunities here, I’ve involved myself in a number of clubs at Dublin High. I am a member of HOSA (Health Occupation Students of American, a programmer for Gael Force Robotics, and Vice-President of 2Serve.
+            <h5>  
+              Check out my <a class="generallink" href="#project_tab">work experience</a> below or you can <a class="generallink" href="#contact_tab">contact me</a> if you have any other questions.
             </h5>
           </div>
         </div>
@@ -99,7 +99,7 @@
                 View
                 <a class="generallink" href="https://docs.google.com/document/d/1IoekCG3no2OSVWdrILxe46UQ8Lt0ame2lE9iXe3BdDQ/edit?usp=sharing" target="_blank">Report</a>
                 or
-                <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing">Presentation</a>
+                <a class="generallink" href="https://docs.google.com/presentation/d/1gKMSfEw7i6QRQszp9UJoTvN3t5s02DPfmvx4g8fBboA/edit?usp=sharing" target="_blank">Presentation</a>
               </h5>
             </div>
           </div>
