--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   </span>
                 </h5>
                 <h5 class="project-links">
-                  <a href="https://docs.google.com/presentation/d/1EeLuR5zNnw-QqY77E86_SkPSB_UxwJT6YGGvnX7nWXw/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
+                  <a href="https://docs.google.com/presentation/d/1GBc7V3AIgVut8kfLm1wTfbQcXVPH1jD5pB94uHed3E0/edit?usp=sharing" target = "_blank" class="generallink">View Presentation</a>
                 </h5>
               </div>
             </div>
@@ -241,9 +241,7 @@
                 <span class="short-text">Research was conducted on the COVID-19 virus using Computational Biochemistry techniques. </span>
               </h5>
               <h5 class="project-links">
-                <i>
-                Research Pending Publication
-                </i>
+                <a href="https://drive.google.com/file/d/1xub-RKTMuc2zWwhTXYNX2eAti-t0Ytey/view?usp=sharing" target="_blank" class="generallink">View Research Paper</a>
               </h5>
             </div>
           </div>
