--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="col s12 xl6" src="res/img/landing_web_dev.svg" alt="Ritviksiddha Penchala landing image">
         <div class="col s12 xl6">
           <h1 class="landing-text">Hi! I'm Ritvik.</h1>
-          <h4 class="landing-text">An aspiring medical student with a passion for code</h4>
+          <h4 class="landing-text">A pre-med student with a passion for code</h4>
           <h4 class="landing-text">
             Learn more <a class="generallink" href="#about_tab">about me</a><br />
             View my <a class="generallink" href="#project_tab">experience</a></br>
