--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
               <h5>
                 <i>
                 <span class="full-text">
-                  Vice - President from August 2019 - Current<br />
-                  Lead Developer from August 2017 - Current
+                  Vice - President from August 2019 - June 2021<br />
+                  Lead Developer from August 2017 - June 2021
                 </span>
-                <span class="short-text">Vice-President from Aug '19 - Current</span>
+                <span class="short-text">Vice-President from Aug '19 - Jun '21</span>
                 </i></h5>
               <h5>
                 <span class="full-text">
@@ -156,9 +156,9 @@
                 <h4 class="exp_title">Gael Force Robotics</h4>
                 <h5><i>
                   <span class="full-text">
-                    Lead Developer from November 2018 - Current
+                    Lead Developer from November 2018 - June 2021
                   </span>
-                  <span class="short-text">Lead Developer from Nov '18 - Current</span></i></h5>
+                  <span class="short-text">Lead Developer from Nov '18 - Jun '21</span></i></h5>
                 <h5>
                   <span class="full-text">
                     A website to showcase my robotics team (team 5327), provide resources for members, network to other VRC teams, and write in our team blog. In addition to being the website developer, I also assist in engineering the robot, programming its movement, and documenting the design process.
