--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col s12 xl8 white-text">
             <h1>About Me</h1>
             <h5>
-              Hi! My name's Ritviksiddha Penchala and I'm a freshman at UC San Diego. 
+              Hi! My name's Ritviksiddha Penchala and I'm a junior at UC San Diego. 
               I'm a Biology major specializing in Bioinformatics. 
               I've got a huge interest in biotechnology as a whole and hope to utilize my love for computers, programming, and technology in order to contribute to the field of health care. 
               I've worked on a number of code and science-related projects before and absolutely love working in the intersection between those fields. 
