--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><circle cx='16' cy='16' r='8' fill='%2322C55E'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritviksiddha Penchala</title>
-    <meta name="description" content="Ritviksiddha Penchala - Data Scientist at UCSF. Machine Learning, NLP, Bioinformatics." />
+    <meta name="description" content="Ritviksiddha Penchala - Data Scientist @ UCSF" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,400&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet" />
