--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritviksiddha Penchala</title>
     <meta name="description" content="Ritviksiddha Penchala - Data Scientist @ UCSF" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ritvikpen.github.io/" />
+    <meta property="og:title" content="Ritviksiddha Penchala" />
+    <meta property="og:description" content="Ritviksiddha Penchala - Data Scientist @ UCSF" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Ritviksiddha Penchala" />
+    <meta name="twitter:description" content="Ritviksiddha Penchala - Data Scientist @ UCSF" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,400&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet" />
