--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><text x='2' y='24' font-family='monospace' font-size='20' font-weight='bold' fill='%2322C55E'>＞_</text></svg>" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><text x='0' y='24' font-family='monospace' font-size='18' font-weight='bold' fill='%2322C55E'>&gt;rp</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritviksiddha Penchala</title>
     <meta name="description" content="Ritviksiddha Penchala - Data Scientist @ UCSF" />
